--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_bloc: ^9.1.0
   video_player: ^2.9.3
   flutter_markdown: ^0.7.6+2
+  http: ^1.3.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
