--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.1.0
-  video_player: ^2.9.3
   flutter_markdown: ^0.7.6+2
   http: ^1.3.0
   dartz: ^0.10.1
-
+  equatable: ^2.0.7
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
